# cg-dwf

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.original  NEWS  acinclude.m4  algorithm2e.sty  cg-dwf-config-internal.h.in  cg-dwf-config.h  cg-dwf-config.in  configure  configure.ac  dwf-altivecf.c  dwf-bluelightd.c  dwf-bluelightf.c  dwf-ssed.c  dwf-ssed.h  dwf-ssef.c  dwf-ssef.h  dwf-tables.h  dwf.c  dwf.nw  t_dwf_cg2.c
config/: bluelightd.conf  ssed.conf  ssef.conf
tests/bluelight/: Makefile  README  bl.c  main.c
tests/qdpc/: .gdb_history  8-3-16-2-1-altivecf-single  8-3-16-2-1-ssed-single  8-3-16-2-1-ssef-single  8-3-16-2-altivecf-single  8-3-16-2-ssed-single  8-3-16-2-ssef-single  Makefile  README  cg-solver.c  cg-solver1.c  dwf-dd.c  dwf-dd1.c  dwf-op.c  dwf-op1.c  dwf-opx.c  dwf-opx1.c  dwf-run  dwf-run-s  dwf1-run  dwf1-run-s  fermions.c  op-altivecf.res  op-ssed.res  op-ssef.res  results  run-me  ssed-test  test-case-args
tests/ssef/: Makefile  README  bl.c
tests/xqmp/: .gdb_history  Makefile  README  qmp-check.c  qmp.c
